# dogcrud

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE.txt  MAINTAINERS.md  README.md  SECURITY.md  Taskfile.dist.yaml  datadog-reference-tables-api-bug.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
scripts/: check_python_classifiers.py  ci_primary_python.py  compare_incident_list_vs_get.py  version_bump.py
src/dogcrud/: __about__.py
src/dogcrud/cli/: list.py  main.py  save.py
src/dogcrud/core/: context.py  data.py  incident_attachment_resource_type.py  incident_resource_type.py  logs_index_resource_type.py  metric_resource_type.py  pagination.py  reference_table_resource_type.py  resource_type_registry.py  rest.py  slack_channel_resource_type.py  standard_resource_type.py
tests/: test_json_formatting.py
