[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dogcrud"
version = "1.7.3"
description = "Datadog CRUD resources from the command line."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
	"aiofiles~=24.1.0",
	"aiohttp[speedups]~=3.11.11",
	"click>=8.1.8,<8.4.0",
	"orjson~=3.11.0",
	"pydantic~=2.12.0",
]
authors = [
  {name = "Doug Richardson", email = "git@rekt.email"},
]

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: System :: Monitoring",
]

keywords = ["datadog", "cli"]

[project.urls]
Documentation = "https://github.com/drichardson/dogcrud"
Issues = "https://github.com/drichardson/dogcrud/issues"
Source = "https://github.com/drichardson/dogcrud.git"

[project.scripts]
dogcrud = "dogcrud.cli.main:cli"

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.0.0",
  "types-aiofiles",
  "ruff",
]

[tool.coverage.run]
source_pkgs = ["dogcrud", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
dogcrud = ["src/dogcrud", "*/dogcrud/src/dogcrud"]
tests = ["tests", "*/dogcrud/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = ["G004"]
